Fix release overview table when release titles are too long

--- a/app/assets/stylesheets/modules/collections/releases.scss
+++ b/app/assets/stylesheets/modules/collections/releases.scss
@@ -1,4 +1,9 @@
 .releases {
+  ul li {
+    position: relative;
+    padding-right: ($gridColumnWidth * 1.25 + 1) * 3;
+  }
+  
   img {
     position: relative;
     top: -2px;
@@ -11,6 +16,23 @@
   .release-label {
     display: inline-block;
     margin-right: $gridColumnWidth / 4;
+  }
+  
+  .action {
+    position: absolute;
+    top: 0;
+  }
+  
+  .edit {
+    right: ($gridColumnWidth * 1.25 + 1) * 2;
+  }
+  
+  .send, .metrics {
+    right: ($gridColumnWidth * 1.25 + 1);
+  }
+  
+  .public {
+    right: 0;
   }
 }
 
